# Bili-music

./: .gitignore  CLAUDE.md  GEMINI.md  README.md  index.html  package.json  pnpm-lock.yaml  tsconfig.json
scripts/: download-ffmpeg.ps1
src/: App.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: config.rs  error.rs  lib.rs  main.rs
src-tauri/src/commands/: download.rs  favorites_import.rs  lyrics.rs  mod.rs  search.rs  settings.rs
src-tauri/src/core/: converter.rs  downloader.rs  favorites_import.rs  ffmpeg_path.rs  lyrics_client.rs  mod.rs  searcher.rs  task_manager.rs
src/components/: AppHeader.vue  SongContextMenu.vue  TitleBar.vue
src/components/favorites/: FavoriteList.vue
src/components/player/: AudioVisualizer.vue  CommentPanel.vue  DanmakuLayer.vue  DesktopLyrics.vue  FullPlayer.vue  MiniPlayer.vue  MiniPlayerWindow.vue  PlaylistPanel.vue  ScrollingLyrics.vue  SpinningDisc.vue
src/components/playlists/: PlaylistGrid.vue  (+5 more)
src/composables/: useAudio.ts  useAudioCache.ts  useCrossWindowSync.ts  useDragSort.ts  useKeyboardShortcuts.ts  useLyrics.ts  useMediaSession.ts  usePlayerControls.ts  useThemeColor.ts  useWindowGeometry.ts  useWindowManager.ts
src/pages/: DownloadPage.vue  HomePage.vue
src/router/: index.ts
src/stores/: download.ts  favorites.ts  history.ts  lyricOffsets.ts  player.ts  playlists.ts  search.ts  settings.ts
src/styles/: global.css  theme.css
src/types/: index.ts
src/utils/: colorUtils.ts  emitter.ts  formatters.ts  lrc-parser.ts
(+6 files in other folders)
