[package]
name = "bili-music-app"
version = "1.0.0"
edition = "2021"

[lib]
name = "bili_music_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "cookies", "stream", "gzip"] }
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4"] }
regex = "1"
dirs = "5"
opener = "0.8"
anyhow = "1"
thiserror = "2"
futures-util = "0.3"
